k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stash-example
  labels:
    name: stash-example
    app: stash-example
    environment: production
