k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash-example-service
  namespace: stash-example
  labels:
    app: stash-example
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: stash-example
    component: web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
